--- a/Tabel.html
+++ b/Tabel.html
@@ -46,7 +46,7 @@
             <th>2019</th>
             <td class="green">7,713,468,100</td>
             <td class="red">1.08 %</td>
-            <td class="green">82,377,060</td>
+            <td class="red">82,377,060</td>
             <td class="green">52</td>
         </tr>
 
@@ -54,7 +54,7 @@
             <th>2018</th>
             <td class="green">7,631,091,040</td>
             <td class="red">1.10 %</td>
-            <td class="green">83,232,115</td>
+            <td class="red">83,232,115</td>
             <td class="green">51</td>
         </tr>
 
